--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
+
 {
-  "name": "backend-port",
+  "name": "coding-profiles-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API for fetching coding profiles from platforms like CodeChef and LeetCode",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cheerio": "^1.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
